<resources>
    <string name="app_name">scroble</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Scroble</string>
    <string name="nav_header_subtitle">Powered by Trakt</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_shows">Shows</string>
    <string name="shows_selection_chip_trending">Trending</string>
    <string name="shows_selection_chip_popular">Popular</string>
    <string name="shows_selection_chip_anticipated">Anticipated</string>
    <string name="shows_selection_chip_viewed">Most views</string>
    <string name="shows_selection_chip_recommended">Recommended</string>

    <string name="menu_show_details">Show details</string>
    <string name="show_details_banner">Banner for the show</string>
    <string name="show_details_overview_label">Overview</string>
    <string name="show_details_season_label">Seasons</string>
    <string name="show_details_status_label">Status</string>
    <string name="show_details_airs_label">Airs</string>
    <string name="show_details_country_label">Country</string>
    <string name="show_details_language_label">Language</string>
    <string name="show_details_genres_label">Genres</string>
    <string name="show_details_runtime_label">Runtime</string>
    <string name="minutes">minutes</string>
    <string name="show_details_airs_text">{day} at {time} on {channel}</string>
    <string name="show_details_season_text">Season {number}</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="menu_show_season">Season</string>
    <string name="menu_show_episode">Episode</string>
    <string name="show_details_aired_label">First aired</string>
    <string name="show_details_votes_label">Votes</string>
    <string name="show_details_rating_label">Rating</string>
    <string name="menu_shows_anticipated">Anticipated shows</string>
    <string name="menu_shows_most_recommended">Recommended shows</string>
    <string name="menu_shows_most_viewed">Most viewed shows</string>
    <string name="menu_shows_popular">Popular shows</string>
    <string name="menu_shows_trending">Trending shows</string>
    <string name="menu_home">Home</string>
    <string name="no_internet">Network is currently unavailable, the data shown might be outdated</string>
    <string name="action_share">Share</string>
    <string name="share_show_detail">Check out this show: {show}</string>
    <string name="settings_pagesize">Page size</string>
    <string name="settings_pagesize_info">This value sets how many shows to fetch in overviews, reduced values will increase the app\'s speed.</string>
    <string name="settings_period">Time period</string>
    <string name="settings_period_info">Changing this value modifies the time period used to calculate the most viewed and recommended shows</string>
    <string name="settings_confirm">Save changes</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_search_show">Search for show</string>
    <string name="search_label">Finding show for \'{query}\'</string>
    <string name="home_title">Scroble</string>
    <string name="home_overview_label">Keep track of the most popular, recommendend and anticipated Shows at the moment, always up to date with the latest info.</string>
    <string name="home_attribution">Powered by Trakt.tv</string>
    <string name="home_advice">Click on the menu to begin</string>
    <string-array name="settings_period_array">
        <item>weekly</item>
        <item>monthly</item>
        <item>yearly</item>
        <item>all</item>
    </string-array>
</resources>